--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -698,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 355,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +748,7 @@
     "_=[ax.set_title(\"\\n\") for ax in axes]\n",
     "_ = plt.tight_layout()\n",
     "\n",
-    "_= plt.savefig('../Images/graph1.png', )\n",
+    "_= plt.savefig('../Images/graph1.png', bbox_inches = \"tight\" )\n",
     "plt.show()"
    ]
   },
