Added outlier analysis

--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -891,76 +891,382 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Quartiles, Outliers and Boxplots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 603,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Final tumor volume of each mouse across four of the most promising treatment regimens [Capomulin, Ramicane, Infubinol, Ceftamin]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>a203</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>45</td>\n",
+       "      <td>67.973419</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>a251</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>45</td>\n",
+       "      <td>65.525743</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>a275</td>\n",
+       "      <td>Ceftamin</td>\n",
+       "      <td>45</td>\n",
+       "      <td>62.999356</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>a411</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>45</td>\n",
+       "      <td>38.407618</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>a444</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>45</td>\n",
+       "      <td>43.047543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>238</th>\n",
+       "      <td>y769</td>\n",
+       "      <td>Ceftamin</td>\n",
+       "      <td>45</td>\n",
+       "      <td>68.594745</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>239</th>\n",
+       "      <td>y793</td>\n",
+       "      <td>Capomulin</td>\n",
+       "      <td>45</td>\n",
+       "      <td>31.896238</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>240</th>\n",
+       "      <td>y865</td>\n",
+       "      <td>Ceftamin</td>\n",
+       "      <td>45</td>\n",
+       "      <td>64.729837</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>244</th>\n",
+       "      <td>z578</td>\n",
+       "      <td>Ramicane</td>\n",
+       "      <td>45</td>\n",
+       "      <td>30.638696</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>245</th>\n",
+       "      <td>z581</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>45</td>\n",
+       "      <td>62.754451</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Mouse ID Drug Regimen  Timepoint  Tumor Volume (mm3)\n",
+       "0       a203    Infubinol         45           67.973419\n",
+       "1       a251    Infubinol         45           65.525743\n",
+       "3       a275     Ceftamin         45           62.999356\n",
+       "6       a411     Ramicane         45           38.407618\n",
+       "7       a444     Ramicane         45           43.047543\n",
+       "..       ...          ...        ...                 ...\n",
+       "238     y769     Ceftamin         45           68.594745\n",
+       "239     y793    Capomulin         45           31.896238\n",
+       "240     y865     Ceftamin         45           64.729837\n",
+       "244     z578     Ramicane         45           30.638696\n",
+       "245     z581    Infubinol         45           62.754451\n",
+       "\n",
+       "[100 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 603,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IQR of final tumor volumes of mice for the regimes [Capomulin, Ramicane, Infubinol, Ceftamin]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Q1</th>\n",
+       "      <th>Q3</th>\n",
+       "      <th>IQR</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Capomulin</th>\n",
+       "      <td>32.377357</td>\n",
+       "      <td>40.159220</td>\n",
+       "      <td>7.781863</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ceftamin</th>\n",
+       "      <td>48.722078</td>\n",
+       "      <td>64.299830</td>\n",
+       "      <td>15.577752</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Infubinol</th>\n",
+       "      <td>54.048608</td>\n",
+       "      <td>65.525743</td>\n",
+       "      <td>11.477135</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ramicane</th>\n",
+       "      <td>31.560470</td>\n",
+       "      <td>40.659006</td>\n",
+       "      <td>9.098537</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     Q1         Q3        IQR\n",
+       "Drug Regimen                                 \n",
+       "Capomulin     32.377357  40.159220   7.781863\n",
+       "Ceftamin      48.722078  64.299830  15.577752\n",
+       "Infubinol     54.048608  65.525743  11.477135\n",
+       "Ramicane      31.560470  40.659006   9.098537"
+      ]
+     },
+     "execution_count": 603,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Display of any outlier in the regimes [Capomulin, Ramicane, Infubinol, Ceftamin]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Mouse ID</th>\n",
+       "      <th>Drug Regimen</th>\n",
+       "      <th>Timepoint</th>\n",
+       "      <th>Tumor Volume (mm3)</th>\n",
+       "      <th>Outlier?</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>c326</td>\n",
+       "      <td>Infubinol</td>\n",
+       "      <td>5</td>\n",
+       "      <td>36.321346</td>\n",
+       "      <td>True</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Mouse ID Drug Regimen  Timepoint  Tumor Volume (mm3)  Outlier?\n",
+       "31     c326    Infubinol          5           36.321346      True"
+      ]
+     },
+     "execution_count": 603,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mouse c326 shows tremendous improvement compared to other mice trated with Infubinol\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate the final tumor volume of each mouse across four of the most promising treatment regimens [Capomulin, Ramicane, Infubinol, Ceftamin]. \n",
+    "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
+    "\n",
+    "#Generate indices (Mouse ID, Drug Regimen, Time point) those corresponds to the final tumor volume\n",
+    "Final_Index = DF.groupby(['Mouse ID', 'Drug Regimen'])['Timepoint'].last().reset_index().set_index(['Mouse ID','Drug Regimen', 'Timepoint']).index\n",
+    "\n",
+    "#Extract Final Tumour volumne across drug regimes\n",
+    "Final_Tumor_Volume = DF.copy()\n",
+    "Final_Tumor_Volume.set_index(['Mouse ID', 'Drug Regimen', 'Timepoint'], inplace=True)\n",
+    "Final_Tumor_Volume=Final_Tumor_Volume.loc[Final_Index]['Tumor Volume (mm3)']\n",
+    "Final_Tumor_Volume = Final_Tumor_Volume.reset_index()\n",
+    "#Now we have a DF of 248 rows and 4 columns ['Mouse ID', 'Drug Regimen', 'Timepoint', 'Tumor Volume (mm3)']\n",
+    "\n",
+    "#####PLEASE READE THIS######\n",
+    "#In the entire dataset, each mouse is observed and studied under only one treatment regime.\n",
+    "#To find the most promising four treatment regimes, we take the average of the final tumour volume in that regime\n",
+    "Regime_Avg_Final_Tumor_Volume = Final_Tumor_Volume.groupby('Drug Regimen')['Tumor Volume (mm3)'].mean()\n",
+    "#Sort this DF in ascending order to find the best performing regimes\n",
+    "Best_Performing_4_Regimes = Regime_Avg_Final_Tumor_Volume.sort_values().index.to_list()[:4]\n",
+    "#I got the best performing regimes as ['Ramicane', 'Capomulin', 'Propriva', 'Ceftamin']\n",
+    "#However, we are hinted that, [Capomulin, Ramicane, Infubinol, Ceftamin]  are most promising. Hence, I am taking  them as they are\n",
+    "\n",
+    "Most_Promising_Regimes = ['Capomulin', 'Ramicane', 'Infubinol', 'Ceftamin']\n",
+    "#Extract the Final Tumour volumes of only the most promising drug regimes (MPDR)\n",
+    "Final_Tumor_Volume_MPDR = Final_Tumor_Volume[Final_Tumor_Volume['Drug Regimen'].isin(Most_Promising_Regimes)].copy()\n",
+    "print(\"Final tumor volume of each mouse across four of the most promising treatment regimens [Capomulin, Ramicane, Infubinol, Ceftamin]\")\n",
+    "Final_Tumor_Volume_MPDR\n",
+    "#Calculate Q1, Q3 and IQR for each of these treatment regime\n",
+    "Final_Tumor_Volume_MPDR_Quantiles = Final_Tumor_Volume_MPDR.groupby('Drug Regimen').aggregate(Q1 = ('Tumor Volume (mm3)', lambda x: pd.DataFrame(x).quantile(.25)), Q3 = ('Tumor Volume (mm3)', lambda x: pd.DataFrame(x).quantile(.75)), IQR = ('Tumor Volume (mm3)', lambda x: np.quantile(x, 0.75) - np.quantile(x, 0.25)))    \n",
+    "print(\"IQR of final tumor volumes of mice for the regimes [Capomulin, Ramicane, Infubinol, Ceftamin]\")\n",
+    "Final_Tumor_Volume_MPDR_Quantiles\n",
+    "#Check for outliers in each of these regimes; Create a new boolean column \n",
+    "Final_Tumor_Volume_MPDR['Outlier?'] = Final_Tumor_Volume_MPDR.apply(lambda x: True if ((x['Tumor Volume (mm3)'] >  (Final_Tumor_Volume_MPDR_Quantiles.loc[x['Drug Regimen'], 'Q3']+(1.5*Final_Tumor_Volume_MPDR_Quantiles.loc[x['Drug Regimen'], 'IQR']))) | (x['Tumor Volume (mm3)'] <  (Final_Tumor_Volume_MPDR_Quantiles.loc[x['Drug Regimen'], 'Q1']-(1.5*Final_Tumor_Volume_MPDR_Quantiles.loc[x['Drug Regimen'], 'IQR'])))) else False, axis=1)\n",
+    "\n",
+    "#Filter the outlier\n",
+    "print(\"Display of any outlier in the regimes [Capomulin, Ramicane, Infubinol, Ceftamin]\")\n",
+    "Final_Tumor_Volume_MPDR[Final_Tumor_Volume_MPDR['Outlier?']]\n",
+    "#Mouse c326 shows tremendous improvement compared to other mice trated with Infubinol\n",
+    "print(\"Mouse c326 shows tremendous improvement compared to other mice trated with Infubinol\")\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.pie(sizes, explode=explode, labels=labels, colors=colors,\n",
-    "        autopct=\"%.1f%%\", shadow=True, startangle=0, rotatelabels=True)\n",
-    "plt.axis(\"equal\")"
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[Text(1.1327396616418983, 0.3961071306394242, 'Male'),\n",
-       " Text(-1.0383446898384068, -0.36309820308613894, 'Female')]"
-      ]
-     },
-     "execution_count": 488,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
-    "texts"
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[0.1, 0]"
-      ]
-     },
-     "execution_count": 467,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "[(0.1 if gender==DF_gender.idxmax(axis=0) else 0)for gender in DF_gender.index]"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 427,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x137e43d00>"
-      ]
-     },
-     "execution_count": 427,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "axes"
-   ]
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
