--- a/Pymaceuticals/pymaceuticals.ipynb
+++ b/Pymaceuticals/pymaceuticals.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 614,
+   "execution_count": 680,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 615,
+   "execution_count": 681,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
        "249"
       ]
      },
-     "execution_count": 615,
+     "execution_count": 681,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 616,
+   "execution_count": 682,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
        "['g989']"
       ]
      },
-     "execution_count": 616,
+     "execution_count": 682,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 617,
+   "execution_count": 683,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +320,7 @@
        "1592  Female          21          26  "
       ]
      },
-     "execution_count": 617,
+     "execution_count": 683,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -337,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 618,
+   "execution_count": 684,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -350,7 +350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 619,
+   "execution_count": 685,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +359,7 @@
        "248"
       ]
      },
-     "execution_count": 619,
+     "execution_count": 685,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 620,
+   "execution_count": 686,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -394,7 +394,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 621,
+   "execution_count": 687,
    "metadata": {},
    "outputs": [
     {
@@ -533,7 +533,7 @@
        "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 621,
+     "execution_count": 687,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 622,
+   "execution_count": 688,
    "metadata": {},
    "outputs": [
     {
@@ -698,7 +698,7 @@
        "Zoniferol     53.236507  51.818479  48.533355  6.966589  0.516398"
       ]
      },
-     "execution_count": 622,
+     "execution_count": 688,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -726,7 +726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 623,
+   "execution_count": 689,
    "metadata": {},
    "outputs": [
     {
@@ -782,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 624,
+   "execution_count": 690,
    "metadata": {
     "scrolled": true
    },
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 625,
+   "execution_count": 691,
    "metadata": {},
    "outputs": [
     {
@@ -907,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 626,
+   "execution_count": 692,
    "metadata": {},
    "outputs": [
     {
@@ -968,7 +968,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 627,
+   "execution_count": 693,
    "metadata": {},
    "outputs": [
     {
@@ -999,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 628,
+   "execution_count": 694,
    "metadata": {},
    "outputs": [
     {
@@ -1044,7 +1044,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 629,
+   "execution_count": 695,
    "metadata": {},
    "outputs": [
     {
@@ -1181,7 +1181,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 629,
+     "execution_count": 695,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1262,7 +1262,7 @@
        "Ramicane      31.560470  40.659006   9.098537"
       ]
      },
-     "execution_count": 629,
+     "execution_count": 695,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1319,7 +1319,7 @@
        "31     c326    Infubinol          5                 36.321346      True"
       ]
      },
-     "execution_count": 629,
+     "execution_count": 695,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1368,7 +1368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 630,
+   "execution_count": 696,
    "metadata": {},
    "outputs": [
     {
@@ -1447,7 +1447,7 @@
        "4  72.226731  48.722078  38.342008  40.159220"
       ]
      },
-     "execution_count": 630,
+     "execution_count": 696,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1516,7 +1516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 631,
+   "execution_count": 697,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1525,7 +1525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 632,
+   "execution_count": 698,
    "metadata": {},
    "outputs": [
     {
@@ -1700,7 +1700,7 @@
        "1817  Male          17          19  "
       ]
      },
-     "execution_count": 632,
+     "execution_count": 698,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1780,7 +1780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 633,
+   "execution_count": 699,
    "metadata": {},
    "outputs": [
     {
@@ -1871,7 +1871,7 @@
        "8          25                44.062109"
       ]
      },
-     "execution_count": 633,
+     "execution_count": 699,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1888,7 +1888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 634,
+   "execution_count": 700,
    "metadata": {},
    "outputs": [
     {
@@ -1957,7 +1957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 635,
+   "execution_count": 701,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1967,7 +1967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 636,
+   "execution_count": 702,
    "metadata": {},
    "outputs": [
     {
@@ -1992,7 +1992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 637,
+   "execution_count": 703,
    "metadata": {},
    "outputs": [
     {
@@ -2077,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 638,
+   "execution_count": 704,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2088,7 +2088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 639,
+   "execution_count": 705,
    "metadata": {},
    "outputs": [
     {
@@ -2101,15 +2101,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -2148,13 +2139,13 @@
     "                             ls='--'))\n",
     "\n",
     "_ = plt.tight_layout()\n",
-    "_ = plt.show()\n",
-    "_= plt.savefig('../Images/graph7.png', bbox_inches = \"tight\" )\n"
+    "_= plt.savefig('../Images/graph7.png', bbox_inches = \"tight\" )\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 640,
+   "execution_count": 706,
    "metadata": {},
    "outputs": [
     {
@@ -2167,15 +2158,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -2215,22 +2197,22 @@
     "                             ls='--'))\n",
     "\n",
     "_ = plt.tight_layout()\n",
-    "_ = plt.show()\n",
-    "_= plt.savefig('../Images/graph8.png', bbox_inches = \"tight\" )"
+    "_= plt.savefig('../Images/graph8.png', bbox_inches = \"tight\" )\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 641,
+   "execution_count": 707,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.LineCollection at 0x123ef2d60>"
+       "<matplotlib.collections.LineCollection at 0x1204e2f10>"
       ]
      },
-     "execution_count": 641,
+     "execution_count": 707,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2244,15 +2226,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -2293,13 +2266,13 @@
     "    _=axes.annotate(\"{:.2f}%\".format(p.get_height()), (p.get_x()-0.05, (p.get_height()-0.4 if p.get_height()<0 else p.get_height()+0.15)), fontsize=12)\n",
     "    \n",
     "_ = plt.tight_layout() \n",
-    "_ = plt.show()\n",
-    "_= plt.savefig('../Images/graph9.png', bbox_inches = \"tight\" )\n"
+    "_= plt.savefig('../Images/graph9.png', bbox_inches = \"tight\" )\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 642,
+   "execution_count": 708,
    "metadata": {},
    "outputs": [
     {
@@ -2309,7 +2282,7 @@
        "Name: Metastatic Sites, dtype: int64"
       ]
      },
-     "execution_count": 642,
+     "execution_count": 708,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -2323,15 +2296,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -2374,13 +2338,13 @@
     "    _=axes.annotate(\"{:.2f}\".format(p.get_height()), (p.get_x()-0.05, (p.get_height()-0.4 if p.get_height()<0 else p.get_height()+0.15)), fontsize=12)\n",
     "    \n",
     "_ = plt.tight_layout()   \n",
-    "_ = plt.show()\n",
-    "_= plt.savefig('../Images/graph10.png', bbox_inches = \"tight\" )"
+    "_= plt.savefig('../Images/graph10.png', bbox_inches = \"tight\" )\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 643,
+   "execution_count": 709,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2391,7 +2355,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 644,
+   "execution_count": 710,
    "metadata": {},
    "outputs": [
     {
@@ -2411,7 +2375,7 @@
        "Name: 0, dtype: float64"
       ]
      },
-     "execution_count": 644,
+     "execution_count": 710,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2422,7 +2386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 645,
+   "execution_count": 711,
    "metadata": {},
    "outputs": [
     {
@@ -2435,15 +2399,6 @@
      "metadata": {
       "needs_background": "light"
      },
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Figure size 432x288 with 0 Axes>"
-      ]
-     },
-     "metadata": {},
      "output_type": "display_data"
     }
    ],
@@ -2463,8 +2418,8 @@
     "_=ax.set_ylabel(\"Initial Weight (g)\", fontsize=15)\n",
     "_=ax.yaxis.set_label_coords(-0.07,0.5)\n",
     "_ = plt.tight_layout()\n",
-    "_ = plt.show()\n",
-    "_= plt.savefig('../Images/graph11.png', bbox_inches = \"tight\" )"
+    "_= plt.savefig('../Images/graph11.png', bbox_inches = \"tight\" )\n",
+    "plt.show()"
    ]
   }
  ],
